name:                autofill-directory-music
version:             0.1.0.0
synopsis:            Randomly generates a music collection with a size limit
license:             MIT
author:              Mikael Svantesson
maintainer:          mikael@distopic.net
category:            Sound, Music
build-type:          Simple
cabal-version:       >=1.10

executable autofill-directory-music
  main-is:             Main.hs
  other-modules:
    Autofill.Directory.IO,
    Autofill.Directory.Music,
    Autofill.Directory.Shuffle
  build-depends:
    base >=4.7,
    directory,
    unix,
    filepath,
    random,
    array,
    idiii
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
